--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,11 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.break-session{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap : 20px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -24,6 +26,19 @@
   color: white;
 }
 
+.timer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ 
+  border: 2px solid red;
+  border-radius: 20px;
+  width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+
+}
 .App-link {
   color: #61dafb;
 }
